--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
     <section class="container">
       <h2>Built for Academics, Developers, and Writers</h2>
       <div class="use-cases-grid">
-        <div class="use-case-card">
+        <div class="use-case-card" id="latex-feature">
           <h3>Extract Math Equations to LaTeX</h3>
           <p>Stop the tedious manual entry of equations. Use our OCR to grab any formula from a paper or website and get
             perfect LaTeX code in seconds.</p>
@@ -478,7 +478,7 @@
           </div>
         </div>
 
-        <div class="use-case-card">
+        <div class="use-case-card" id="markdown-feature">
           <h3>Convert Image Tables to Markdown</h3>
           <p>Easily extract tables from any screenshot or PDF into clean, structured Markdown, ready for your technical
             docs and blog posts.</p>
